--- a/README
+++ b/README
@@ -73,6 +73,9 @@ instructions; also have a look at the example files.
                          - Add starred version of \sesinstructor that only produces output
                            if the session instructor differs from the general course instructor.
 
+                         - All short{instructor|title} macros now output the long version if no
+                           short form was defined.
+
 * V. 1.3 (2016-08-31):   - BACKWARDS-INCOMPATIBLE CHANGE! Use datetime2 instead of datetime
                            and advdate. This changes the interface to set the lecture date
                            format. Please refer to the documentation for details.
