--- a/README
+++ b/README
@@ -76,6 +76,8 @@ instructions; also have a look at the example files.
                          - All short{instructor|title} macros now output the long version if no
                            short form was defined.
 
+                         - Add boolean tests for unique short forms and session instructors.
+
 * V. 1.3 (2016-08-31):   - BACKWARDS-INCOMPATIBLE CHANGE! Use datetime2 instead of datetime
                            and advdate. This changes the interface to set the lecture date
                            format. Please refer to the documentation for details.
