--- a/README
+++ b/README
@@ -68,7 +68,7 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V 1.4 (forthcoming):   - Add instructor short forms for lecture and session.
+* V 1.4 (2016-10-19):    - Add instructor short forms for lecture and session.
 
                          - Add starred version of \sesinstructor that only produces output
                            if the session instructor differs from the general course instructor.
