Add datakeys option to the jsmembertable package

--- a/README
+++ b/README
@@ -68,6 +68,8 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V 1.5 (forthcoming):   - Add datakeys option to the jsmembertable package.
+
 * V 1.4 (2016-10-19):    - Add instructor short forms for lecture and session.
 
                          - Add starred version of \sesinstructor that only produces output
