--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -237,7 +237,7 @@ Also cf. sec.~\ref{sec:styles}.
 \item [\joption{instructor=<name>}] (General) course instructor's name;
       it is possible to specify different or specific instructors for individual sessions
       (see sec. \ref{sec:lecplan})
-\item [\joption{shortinstructor=<name>}] Short form of the (general) course instructor's name (e.\,g., for headings)
+\item [\joption{shortinstructor=<name>}] Short form of the course instructor's name (e.\,g., for headings)
 \item [\joption{platform=<data>}] Information of the e-learning platform
       (such as the URL)
 \item [\joption{officehours=<data>}] Date of your office hours
@@ -246,7 +246,7 @@ Also cf. sec.~\ref{sec:styles}.
 
 \subsubsection{Other global settings}
 \begin{description}
-	\item[\joption{sestitlesep=<separator>}] Specifies a default separator between session title and subtitle.
+	\item[\joption{sestitlesep=<separator>}] Specifies a default separator between session title and subtitle
 \end{description}
 
 \subsection{Via macros\label{sec:via-macros}}
@@ -319,7 +319,7 @@ the first session (the argument \emph{must} have the form DD/MM/YYYY)
 
 \subsubsection{Other global settings}\label{ses-global}
 \begin{itemize}
-\item \jcsmacro{SessionTitleSep\{<title separator>\}}: Specify a default separator between session title and subtitle (e.\,g., ``. '' or `` -- ''). This is used if no specific separator has been specified in the session entry (see sec.~\ref{sec:lecplan})
+\item \jcsmacro{SessionTitleSep\{<separator>\}}: Specify a default separator between session title and subtitle (e.\,g., ``. '' or `` -- ''). This is used if no specific separator has been specified in the session entry (see sec.~\ref{sec:lecplan}); by default, no separator is defined.
 \end{itemize}
 
 \section{Setting up a course schedule}\label{sec:lecplan}
@@ -1065,7 +1065,7 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item 2017/03/04 (v. 1.5dev):
+\item 2017/03/11 (v. 1.5dev):
 	\begin{itemize}
 		\item Add \joption{datakeys} option to \jsmt.
 		\item Add package option \joption{sestitlesep} and macro \jcsmacro{SessionTitleSep} that
