--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -69,7 +69,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.5dev, 2017/03/11}
+\date{Version 1.5, 2017/03/12}
 
 \maketitle
 
@@ -1069,7 +1069,7 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item 2017/03/11 (v. 1.5dev):
+\item 2017/03/12 (v. 1.5):
 	\begin{itemize}
 		\item Add \joption{english} style file (proof of concept).
 		\item Add \joption{datakeys} option to \jsmt.
