--- a/jsmembertable.sty
+++ b/jsmembertable.sty
@@ -24,8 +24,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2017/03/04}
-\def\fileversion{1.5dev}
+\def\filedate{2017/03/12}
+\def\fileversion{1.5}
 \def\filename{jsmembertable.sty}
 
 \NeedsTeXFormat{LaTeX2e}
