--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -69,7 +69,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.5, 2017/03/12}
+\date{Version 1.6dev, 2017/03/14}
 
 \maketitle
 
@@ -1069,6 +1069,10 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
+\item forthcoming (v. 1.6):
+	\begin{itemize}
+	    \item Do not output session title-subtitle separator if there is no	subtitle.
+    \end{itemize}
 \item 2017/03/12 (v. 1.5):
 	\begin{itemize}
 		\item Add \joption{english} style file (proof of concept).
